cilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  parentRefs:
  - name: main-gateway
    namespace: kube-system
  hostnames:
  - hubble.${cluster}.raffa
  rules:
  - matches:
    - path:
        value: "/"
    backendRefs:
    - name: hubble-ui
      port: 80
